--- a/FinalExam-UI/package.json
+++ b/FinalExam-UI/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamestore-ui",
-  "homepage": "https://zilionbits.github.io/final-exam-task/",
+  "homepage": "https://zilionbits.github.io/final-exam-task/FinalExam-UI/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
